--- a/sourcecode/breeze/rain/pom.xml
+++ b/sourcecode/breeze/rain/pom.xml
@@ -40,7 +40,7 @@
 		<hikaricp-java7.version>2.4.11</hikaricp-java7.version>
 		<httpclient.version>4.5.3</httpclient.version>
 		<httpcore.version>4.4.6</httpcore.version>
-		<jackson.version>2.8.7</jackson.version>
+		<jackson.version>2.9.2</jackson.version>
 		<javassist.version>3.21.0-GA</javassist.version> <!-- Same as Hibernate -->
 		<javax-cache.version>1.0.0</javax-cache.version>
 		<javax-mail.version>1.5.6</javax-mail.version>
@@ -52,7 +52,7 @@
 		<joda-time.version>2.9.7</joda-time.version>
 		<jstl.version>1.2</jstl.version>
 		<junit.version>4.12</junit.version>
-		<log4j2.version>2.7</log4j2.version>
+		<log4j.version>1.7.25</log4j.version>
 		<logback.version>1.1.11</logback.version>
 		<lombok.version>1.16.14</lombok.version>
 		<mssql-jdbc.version>6.1.0.jre7</mssql-jdbc.version>
@@ -115,6 +115,16 @@
 			</dependency>
 			<!-- Spring end -->
 
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjrt</artifactId>
+				<version>${aspectj.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.aspectj</groupId>
+				<artifactId>aspectjweaver</artifactId>
+				<version>${aspectj.version}</version>
+			</dependency>
 
 			<!-- Servlet -->
 			<dependency>
@@ -134,10 +144,32 @@
 			<!-- json -->
 			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-core</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-databind</artifactId>
 				<version>${jackson.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>com.fasterxml.jackson.core</groupId>
+				<artifactId>jackson-annotations</artifactId>
+				<version>${jackson.version}</version>
+			</dependency>
 
+			<!-- log -->
+			<dependency>
+				<groupId>ch.qos.logback</groupId>
+				<artifactId>logback-classic</artifactId>
+				<version>${logback.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>slf4j-api</artifactId>
+				<version>${log4j.version}</version>
+			</dependency>
+			
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
