--- a/sourcecode/breeze/rain/pom.xml
+++ b/sourcecode/breeze/rain/pom.xml
@@ -23,6 +23,7 @@
 		<classmate.version>1.3.3</classmate.version>
 		<commons-beanutils.version>1.9.3</commons-beanutils.version>
 		<commons-collections.version>3.2.2</commons-collections.version>
+		<commons-fileupload>1.3.3</commons-fileupload>
 		<ehcache.version>2.10.3</ehcache.version>
 		<ehcache3.version>3.2.1</ehcache3.version>
 		<freemarker.version>2.3.25-incubating</freemarker.version>
@@ -116,6 +117,13 @@
 			<!-- Spring end -->
 
 			<dependency>
+				<groupId>commons-fileupload</groupId>
+				<artifactId>commons-fileupload</artifactId>
+				<version>${commons-fileupload}</version>
+			</dependency>
+
+
+			<dependency>
 				<groupId>org.aspectj</groupId>
 				<artifactId>aspectjrt</artifactId>
 				<version>${aspectj.version}</version>
@@ -169,7 +177,7 @@
 				<artifactId>slf4j-api</artifactId>
 				<version>${log4j.version}</version>
 			</dependency>
-			
+
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
