--- a/sourcecode/breeze/rain/rain-web/pom.xml
+++ b/sourcecode/breeze/rain/rain-web/pom.xml
@@ -33,6 +33,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
 		</dependency>
