--- a/sourcecode/breeze/rain/pom.xml
+++ b/sourcecode/breeze/rain/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>git.oschina.net.justlive1.breeze</groupId>
+	<groupId>git.oschina.net.justlive1.breeze.rain</groupId>
 	<artifactId>rain</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -91,12 +91,12 @@
 		<dependencies>
 
 			<dependency>
-				<groupId>git.oschina.net.justlive1.breeze</groupId>
+				<groupId>git.oschina.net.justlive1.breeze.rain</groupId>
 				<artifactId>rain-api</artifactId>
 				<version>${version}</version>
 			</dependency>
 			<dependency>
-				<groupId>git.oschina.net.justlive1.breeze</groupId>
+				<groupId>git.oschina.net.justlive1.breeze.rain</groupId>
 				<artifactId>rain-service</artifactId>
 				<version>${version}</version>
 			</dependency>
