--- a/sourcecode/breeze/rain/rain-service/pom.xml
+++ b/sourcecode/breeze/rain/rain-service/pom.xml
@@ -4,11 +4,11 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>git.oschina.net.justlive1.breeze</groupId>
+		<groupId>git.oschina.net.justlive1.breeze.rain</groupId>
 		<artifactId>rain</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<groupId>git.oschina.net.justlive1.breeze.rain-service</groupId>
+
 	<artifactId>rain-service</artifactId>
 	<name>rain-service</name>
 	<url>http://maven.apache.org</url>
@@ -20,7 +20,7 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>git.oschina.net.justlive1.breeze</groupId>
+			<groupId>git.oschina.net.justlive1.breeze.rain</groupId>
 			<artifactId>rain-api</artifactId>
 		</dependency>
 
@@ -71,7 +71,7 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
