增加exception公共处理

--- a/sourcecode/breeze/rain/rain-api/pom.xml
+++ b/sourcecode/breeze/rain/rain-api/pom.xml
@@ -11,8 +11,11 @@
 	</parent>
 
 	<artifactId>rain-api</artifactId>
+	<packaging>jar</packaging>
+
 	<name>rain-api</name>
 	<url>http://maven.apache.org</url>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
