--- a/sourcecode/breeze/snow/snow-common-web/pom.xml
+++ b/sourcecode/breeze/snow/snow-common-web/pom.xml
@@ -10,8 +10,11 @@
 	</parent>
 
 	<artifactId>snow-common-web</artifactId>
+	<packaging>jar</packaging>
+
 	<name>snow-common-web</name>
 	<url>http://maven.apache.org</url>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
