--- a/sourcecode/breeze/snow/pom.xml
+++ b/sourcecode/breeze/snow/pom.xml
@@ -33,6 +33,7 @@
 		<gradle.version>2.9</gradle.version>
 		<groovy.version>2.4.9</groovy.version>
 		<gson.version>2.8.0</gson.version>
+		<guava.version>21.0</guava.version>
 		<h2.version>1.4.193</h2.version>
 		<hibernate.version>5.0.12.Final</hibernate.version>
 		<hibernate-validator.version>5.3.4.Final</hibernate-validator.version>
@@ -168,6 +169,12 @@
 				<version>${log4j.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>com.google.guava</groupId>
+				<artifactId>guava</artifactId>
+				<version>${guava.version}</version>
+			</dependency>
+			
 			<dependency>
 				<groupId>junit</groupId>
 				<artifactId>junit</artifactId>
