--- a/sourcecode/breeze/storm/storm-cas/src/main/resources/cas.properties
+++ b/sourcecode/breeze/storm/storm-cas/src/main/resources/cas.properties
@@ -1,6 +1,10 @@
-cas.server.name: https://cas.example.org:8443
-cas.server.prefix: https://cas.example.org:8443/cas
+cas.server.name: http://127.0.0.1:8080
+cas.server.prefix: http://127.0.0.1:8080/cas
 
-cas.adminPagesSecurity.ip=127\.0\.0\.1
+cas.adminPagesSecurity.ip=127.0.0.1
+cas.adminPagesSecurity.loginUrl=https://127.0.0.1:8080/cas/login
+cas.adminPagesSecurity.service=https://127.0.0.1:8080/cas/status/dashboard
+cas.adminPagesSecurity.actuatorEndpointsEnabled=true
+cas.adminPagesSecurity.adminRoles=ROLE_ADMIN
 
 logging.config: classpath:log4j2.xml
