--- a/sourcecode/breeze/storm/storm-cas/src/main/resources/cas.properties
+++ b/sourcecode/breeze/storm/storm-cas/src/main/resources/cas.properties
@@ -7,4 +7,7 @@ cas.adminPagesSecurity.service=https://127.0.0.1:8080/cas/status/dashboard
 cas.adminPagesSecurity.actuatorEndpointsEnabled=true
 cas.adminPagesSecurity.adminRoles=ROLE_ADMIN
 
+cas.tgc.secure=false
+cas.warningCookie.secure=false
+
 logging.config: classpath:log4j2.xml
