--- a/sourcecode/breeze/storm/storm-cas/src/main/resources/application.properties
+++ b/sourcecode/breeze/storm/storm-cas/src/main/resources/application.properties
@@ -1,12 +1,15 @@
+
+logging.config=classpath:log4j2.xml
+
 ##
 # CAS Server Context Configuration
 #
-server.context-path=/cas
+server.context-path=/storm-cas
 server.port=8080
 
-#server.ssl.key-store=file:/etc/cas/thekeystore
-#server.ssl.key-store-password=changeit
-#server.ssl.key-password=changeit
+server.ssl.key-store=/etc/cas/server.keystore
+server.ssl.key-store-password=changeit
+server.ssl.key-password=changeit
 #server.ssl.ciphers=
 #server.ssl.client-auth=
 server.ssl.enabled=false
@@ -97,3 +100,24 @@ spring.aop.proxy-target-class=true
 # CAS Authentication Credentials
 #
 cas.authn.accept.users=casuser::notused
+
+
+cas.server.name=http://127.0.0.1:8080
+cas.server.prefix=http://127.0.0.1:8080/storm-cas
+
+cas.adminPagesSecurity.ip=127.0.0.1
+cas.adminPagesSecurity.loginUrl=http://127.0.0.1:8080/storm-cas/login
+cas.adminPagesSecurity.service=http://127.0.0.1:8080/storm-cas/status/dashboard
+cas.adminPagesSecurity.actuatorEndpointsEnabled=true
+cas.adminPagesSecurity.adminRoles=ROLE_ADMIN
+
+cas.tgc.secure=false
+cas.warningCookie.secure=false
+
+##
+# CAS theme
+#
+cas.theme.paramName=storm
+cas.theme.defaultThemeName=cas-theme-storm
+
+
