--- a/sourcecode/breeze/storm/storm-cas/src/main/resources/bootstrap.properties
+++ b/sourcecode/breeze/storm/storm-cas/src/main/resources/bootstrap.properties
@@ -6,7 +6,7 @@
 #
 spring.application.name=cas
 spring.profiles.active=standalone
-#spring.profiles.include=database
+spring.profiles.include=jdbc
 
 ##
 # Configuration server is off by default.
