--- a/sourcecode/breeze/storm/storm-cas/src/main/resources/application.properties
+++ b/sourcecode/breeze/storm/storm-cas/src/main/resources/application.properties
@@ -119,16 +119,21 @@ cas.adminPagesSecurity.adminRoles=ROLE_ADMIN
 # If multiple attribute repository sources are defined, 
 # they are added into a list and their results are cached and merged.
 #
-#cas.authn.attributeRepository.expireInMinutes=30
-#cas.authn.attributeRepository.maximumCacheSize=10000
-#cas.authn.attributeRepository.merger=REPLACE|ADD|MERGE
+cas.authn.attributeRepository.expireInMinutes=30
+cas.authn.attributeRepository.maximumCacheSize=10000
+cas.authn.attributeRepository.merger=MERGE
 
-# Attributes that you wish to resolve for the principal
-#cas.authn.attributeRepository.attributes.uid=uid
-#cas.authn.attributeRepository.attributes.displayName=displayName
-#cas.authn.attributeRepository.attributes.cn=commonName
-#cas.authn.attributeRepository.attributes.affiliation=groupMembership
-
+##
+# CAS provides a facility for limiting failed login attempts to support 
+# password guessing and related abuse scenarios.
+#
+#cas.authn.throttle.usernameParameter=username
+#cas.authn.throttle.schedule.startDelay=10000
+#cas.authn.throttle.schedule.repeatInterval=20000
+#cas.authn.throttle.appcode=CAS
+cas.authn.throttle.failure.threshold=5
+cas.authn.throttle.failure.code=AUTHENTICATION_FAILED
+cas.authn.throttle.failure.rangeSeconds=60
 
 
 ##
