--- a/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
+++ b/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
@@ -3,3 +3,8 @@ rest.template.readTimeout=1000
 rest.template.connectTimeout=1000
 
 rain.service.url=http://127.0.0.1:8080/rain-service
+
+server.name=rain-web
+cas.server.prefixUrl=https://127.0.0.1:8443/storm-cas
+cas.server.loginUrl=${cas.server.prefixUrl}/login
+cas.server.logoutUrl=${cas.server.prefixUrl}/logout
