--- a/sourcecode/breeze/storm/storm-cas/pom.xml
+++ b/sourcecode/breeze/storm/storm-cas/pom.xml
@@ -69,6 +69,12 @@
 			<version>${cas.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apereo.cas</groupId>
+			<artifactId>cas-server-support-json-service-registry</artifactId>
+			<version>${cas.version}</version>
+		</dependency>
+
 		<!-- cas rest ticket start -->
 		<dependency>
 			<groupId>org.apereo.cas</groupId>
