初始化storm-cas-client-shiro

--- a/sourcecode/breeze/storm/pom.xml
+++ b/sourcecode/breeze/storm/pom.xml
@@ -192,5 +192,6 @@
 	<modules>
 		<module>storm-cas</module>
 		<module>storm-cas-client</module>
+		<module>storm-cas-client-shiro</module>
 	</modules>
 </project>
