--- a/sourcecode/breeze/storm/pom.xml
+++ b/sourcecode/breeze/storm/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>git.oschina.net.justlive1.breeze.storm</groupId>
@@ -193,5 +192,6 @@
 		<module>storm-cas</module>
 		<module>storm-cas-client</module>
 		<module>storm-cas-client-shiro</module>
-	</modules>
+    <module>storm-cas-client-security</module>
+  </modules>
 </project>
