--- a/sourcecode/breeze/storm/pom.xml
+++ b/sourcecode/breeze/storm/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>git.oschina.net.justlive1.breeze.storm</groupId>
@@ -22,6 +23,7 @@
 		<springboot.version>1.5.8.RELEASE</springboot.version>
 
 		<spring.version>5.0.2.RELEASE</spring.version>
+		<spring-security.version>5.0.0.RELEASE</spring-security.version>
 		<aspectj.version>1.8.9</aspectj.version>
 		<assertj.version>2.6.0</assertj.version>
 		<caffeine.version>2.3.5</caffeine.version>
@@ -109,6 +111,19 @@
 				<scope>test</scope>
 			</dependency>
 			<!-- Spring end -->
+			
+			<!-- security -->
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-config</artifactId>
+				<version>${spring-security.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>org.springframework.security</groupId>
+				<artifactId>spring-security-web</artifactId>
+				<version>${spring-security.version}</version>
+			</dependency>
 
 			<dependency>
 				<groupId>commons-fileupload</groupId>
@@ -192,6 +207,6 @@
 		<module>storm-cas</module>
 		<module>storm-cas-client</module>
 		<module>storm-cas-client-shiro</module>
-    <module>storm-cas-client-security</module>
-  </modules>
+		<module>storm-cas-client-security</module>
+	</modules>
 </project>
