--- a/sourcecode/breeze/storm/storm-cas-client-security/pom.xml
+++ b/sourcecode/breeze/storm/storm-cas-client-security/pom.xml
@@ -28,6 +28,16 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
