--- a/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
+++ b/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
@@ -8,3 +8,7 @@ server.name=http://127.0.0.1:8080
 cas.server.prefixUrl=http://127.0.0.1:8080/storm-cas
 cas.server.loginUrl=${cas.server.prefixUrl}/login
 cas.server.logoutUrl=${cas.server.prefixUrl}/logout
+
+security.antMatchers=
+security.loginUrl=
+security.successUrl=
