--- a/sourcecode/breeze/storm/storm-cas-client-security/pom.xml
+++ b/sourcecode/breeze/storm/storm-cas-client-security/pom.xml
@@ -38,6 +38,11 @@
 		</dependency>
 		
 		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-cas</artifactId>
+		</dependency>
+		
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
