storm-cas-client-security

--- a/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
+++ b/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
@@ -4,11 +4,16 @@ rest.template.connectTimeout=1000
 
 rain.service.url=http://127.0.0.1:8080/rain-service
 
-server.name=http://127.0.0.1:8080
+app.host=http://127.0.0.1:8080
+app.name=rain-web
+
+server.name=${app.host}
+
 cas.server.prefixUrl=http://127.0.0.1:8080/storm-cas
 cas.server.loginUrl=${cas.server.prefixUrl}/login
 cas.server.logoutUrl=${cas.server.prefixUrl}/logout
 
-security.antMatchers=
-security.loginUrl=
-security.successUrl=
+security.ignoreMatchers=/static/**,/webjars/**
+security.logoutUrl=${cas.server.logoutUrl}?service=${app.host}/${app.name}/
+security.logoutSuccessUrl=${app.host}/${app.name}
+security.proxyReceptorUrl=/j_spring_cas_security_proxyreceptor
