修改配置文件

--- a/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
+++ b/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
@@ -13,6 +13,7 @@ cas.server.prefixUrl=http://127.0.0.1:8080/storm-cas
 cas.server.loginUrl=${cas.server.prefixUrl}/login
 cas.server.logoutUrl=${cas.server.prefixUrl}/logout
 
+security.checkService=${app.host}/${app.name}/j_spring_cas_security_check
 security.ignoreMatchers=/static/**,/webjars/**
 security.logoutUrl=${cas.server.logoutUrl}?service=${app.host}/${app.name}/
 security.logoutSuccessUrl=${app.host}/${app.name}
