--- a/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
+++ b/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
@@ -6,6 +6,7 @@ rain.service.url=http://127.0.0.1:8080/rain-service
 
 app.host=http://127.0.0.1:8080
 app.name=rain-web
+app.ignoreMatchers=/static/**,/webjars/**
 
 server.name=${app.host}
 
@@ -14,7 +15,6 @@ cas.server.loginUrl=${cas.server.prefixUrl}/login
 cas.server.logoutUrl=${cas.server.prefixUrl}/logout
 
 security.checkService=${app.host}/${app.name}/j_spring_cas_security_check
-security.ignoreMatchers=/static/**,/webjars/**
 security.logoutUrl=${cas.server.logoutUrl}?service=${app.host}/${app.name}/
 security.logoutSuccessUrl=${app.host}/${app.name}
 security.proxyReceptorUrl=/j_spring_cas_security_proxyreceptor
