修改cas配置参数

--- a/sourcecode/breeze/storm/storm-cas/src/main/resources/application.properties
+++ b/sourcecode/breeze/storm/storm-cas/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.contextPath=/storm-cas
 server.port=8443
 
 server.ssl.keyStore=/etc/cas/server.keystore
-server.ssl.keyStorePassword=changeit
-server.ssl.keyPassword=changeit
+server.ssl.keyStorePassword=justlive1
+server.ssl.keyAlias=storm.cas.com
 #server.ssl.ciphers=
 #server.ssl.clientAuth=
 server.ssl.enabled=true
@@ -105,8 +105,8 @@ endpoints.shutdown.enabled=false
 # IP address may be enough to protect all endpoints.
 # If you wish to protect the admin pages via CAS itself, configure the rest.
 cas.adminPagesSecurity.ip=127.0.0.1
-cas.adminPagesSecurity.loginUrl=https://127.0.0.1:8443/storm-cas/login
-cas.adminPagesSecurity.service=https://127.0.0.1:8443/storm-cas/status/dashboard
+cas.adminPagesSecurity.loginUrl=https://storm.cas.com:8443/storm-cas/login
+cas.adminPagesSecurity.service=https://storm.cas.com:8443/storm-cas/status/dashboard
 cas.adminPagesSecurity.actuatorEndpointsEnabled=true
 cas.adminPagesSecurity.adminRoles=ROLE_ADMIN
 # cas.adminPagesSecurity.users=file:/etc/cas/config/adminusers.properties
