修改storm-cas-client-security

--- a/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
+++ b/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
@@ -2,19 +2,20 @@
 rest.template.readTimeout=1000
 rest.template.connectTimeout=1000
 
-rain.service.url=http://127.0.0.1:8080/rain-service
+rain.service.url=http://127.0.0.1:8090/rain-service
 
-app.host=http://127.0.0.1:8080
+app.host=http://127.0.0.1:8090
 app.name=rain-web
-app.ignoreMatchers=/static/**,/webjars/**
+app.ignoreMatchers=/static/**,/webjars/**,/j_spring_*
 
 server.name=${app.host}
 
-cas.server.prefixUrl=http://127.0.0.1:8080/storm-cas
+cas.server.prefixUrl=http://storm.cas.com:8080/storm-cas
 cas.server.loginUrl=${cas.server.prefixUrl}/login
 cas.server.logoutUrl=${cas.server.prefixUrl}/logout
 
-security.checkService=${app.host}/${app.name}/j_spring_cas_security_check
+security.filterProcessesUrl=/j_spring_cas_security_check
+security.checkService=${app.host}/${app.name}${security.filterProcessesUrl}
 security.logoutUrl=${cas.server.logoutUrl}?service=${app.host}/${app.name}/
 security.logoutSuccessUrl=${app.host}/${app.name}
 security.proxyReceptorUrl=/j_spring_cas_security_proxyreceptor
