--- a/sourcecode/breeze/storm/storm-cas-client/pom.xml
+++ b/sourcecode/breeze/storm/storm-cas-client/pom.xml
@@ -26,10 +26,20 @@
 			<artifactId>cas-client-core</artifactId>
 			<version>${cas.client.version}</version>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>git.oschina.net.justlive1.breeze.snow</groupId>
+			<artifactId>snow-common-web</artifactId>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
 		</dependency>
 
 		<dependency>
