--- a/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
+++ b/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
@@ -6,7 +6,7 @@ rain.service.url=http://127.0.0.1:8090/rain-service
 
 app.host=http://127.0.0.1:8090
 app.name=rain-web
-app.ignoreMatchers=/static/**,/webjars/**,/j_spring_*
+app.ignoreMatchers=/static/**,/webjars/**,/j_spring*/**
 
 server.name=${app.host}
 
@@ -14,8 +14,8 @@ cas.server.prefixUrl=http://storm.cas.com:8080/storm-cas
 cas.server.loginUrl=${cas.server.prefixUrl}/login
 cas.server.logoutUrl=${cas.server.prefixUrl}/logout
 
-security.filterProcessesUrl=/j_spring_cas_security_check
+security.filterProcessesUrl=/login/cass
 security.checkService=${app.host}/${app.name}${security.filterProcessesUrl}
-security.logoutUrl=${cas.server.logoutUrl}?service=${app.host}/${app.name}/
-security.logoutSuccessUrl=${app.host}/${app.name}
+security.logoutUrl=/logout/cas
+security.logoutSuccessUrl=${cas.server.logoutUrl}?service=${app.host}/${app.name}/
 security.proxyReceptorUrl=/j_spring_cas_security_proxyreceptor
