--- a/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
+++ b/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
@@ -10,7 +10,7 @@ app.ignoreMatchers=/static/**,/webjars/**,/j_spring*/**
 
 server.name=${app.host}
 
-cas.server.prefixUrl=http://storm.cas.com:8080/storm-cas
+cas.server.prefixUrl=https://storm.cas.com:8443/storm-cas
 cas.server.loginUrl=${cas.server.prefixUrl}/login
 cas.server.logoutUrl=${cas.server.prefixUrl}/logout
 
