--- a/sourcecode/breeze/rain/rain-web/src/main/webapp/WEB-INF/web.xml
+++ b/sourcecode/breeze/rain/rain-web/src/main/webapp/WEB-INF/web.xml
@@ -7,6 +7,11 @@
 	<display-name>rain-web</display-name>
 
 	<context-param>
+		<param-name>spring.profiles.active</param-name>
+		<param-value>mock,dev</param-value>
+	</context-param>
+
+	<context-param>
 		<param-name>webAppRootKey</param-name>
 		<param-value>rain-web.root</param-value>
 	</context-param>
