--- a/sourcecode/breeze/storm/storm-cas/src/main/resources/application-jdbc.properties
+++ b/sourcecode/breeze/storm/storm-cas/src/main/resources/application-jdbc.properties
@@ -1,11 +1,11 @@
 #####
 #
 #
-cas.authn.jdbc.query[0].sql=SELECT password FROM security_users WHERE name=?
+cas.authn.jdbc.query[0].sql=SELECT password FROM users WHERE username=?
 cas.authn.jdbc.query[0].fieldPassword=password
 cas.authn.jdbc.query[0].healthQuery=SELECT 1
 cas.authn.jdbc.query[0].isolateInternalQueries=false
-cas.authn.jdbc.query[0].url=jdbc:mysql://127.0.1:3306/library?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=true
+cas.authn.jdbc.query[0].url=jdbc:mysql://127.0.1:3306/earth?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=true
 cas.authn.jdbc.query[0].failFast=true
 cas.authn.jdbc.query[0].isolationLevelName=ISOLATION_READ_COMMITTED
 cas.authn.jdbc.query[0].dialect=org.hibernate.dialect.MySQLDialect
@@ -50,11 +50,11 @@ cas.authn.attributeRepository.attributes.cn=name
 #cas.authn.attributeRepository.jdbc.columnMappings.columnAttrName2=columnAttrValue2
 #cas.authn.attributeRepository.jdbc.columnMappings.columnAttrName3=columnAttrValue3
 
-#cas.authn.attributeRepository.jdbc.sql=SELECT * FROM security_users WHERE {0}
+#cas.authn.attributeRepository.jdbc.sql=SELECT * FROM users WHERE {0}
 #cas.authn.attributeRepository.jdbc.username=name
 #cas.authn.attributeRepository.jdbc.healthQuery=SELECT 1 FROM INFORMATION_SCHEMA.SYSTEM_USERS
 #cas.authn.attributeRepository.jdbc.isolateInternalQueries=false
-#cas.authn.attributeRepository.jdbc.url=jdbc:mysql://127.0.1:3306/library?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=true
+#cas.authn.attributeRepository.jdbc.url=jdbc:mysql://127.0.1:3306/earth?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=true
 #cas.authn.attributeRepository.jdbc.failFast=true
 #cas.authn.attributeRepository.jdbc.isolationLevelName=ISOLATION_READ_COMMITTED
 #cas.authn.attributeRepository.jdbc.dialect=org.hibernate.dialect.MySQLDialect
