--- a/sourcecode/breeze/storm/storm-cas/src/main/resources/application.properties
+++ b/sourcecode/breeze/storm/storm-cas/src/main/resources/application.properties
@@ -128,9 +128,9 @@ cas.authn.attributeRepository.merger=MERGE
 # password guessing and related abuse scenarios.
 #
 #cas.authn.throttle.usernameParameter=username
-#cas.authn.throttle.schedule.startDelay=10000
-#cas.authn.throttle.schedule.repeatInterval=20000
-#cas.authn.throttle.appcode=CAS
+cas.authn.throttle.schedule.startDelay=0
+cas.authn.throttle.schedule.repeatInterval=20000
+cas.authn.throttle.appcode=CAS
 cas.authn.throttle.failure.threshold=5
 cas.authn.throttle.failure.code=AUTHENTICATION_FAILED
 cas.authn.throttle.failure.rangeSeconds=60
