set preferIpAddress true

--- a/sourcecode/breeze/cloud/cloud-config/src/main/resources/application.yml
+++ b/sourcecode/breeze/cloud/cloud-config/src/main/resources/application.yml
@@ -24,6 +24,8 @@ management:
     enabled: false
 
 eureka:
+  instance:
+    preferIpAddress: true
   client:
     serviceUrl:
       defaultZone: http://127.0.0.1:18888/eureka/
