--- a/sourcecode/breeze/rain/rain-web/pom.xml
+++ b/sourcecode/breeze/rain/rain-web/pom.xml
@@ -86,6 +86,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
