--- a/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
+++ b/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
@@ -6,7 +6,8 @@ rain.service.url=http://127.0.0.1:8090/rain-service
 
 app.host=http://127.0.0.1:8090
 app.name=rain-web
-app.ignoreMatchers=/static/**,/webjars/**,/j_spring*/**
+
+app.ignoreMatchers=/static/**,/webjars/**
 
 server.name=${app.host}
 
@@ -14,8 +15,12 @@ cas.server.prefixUrl=https://storm.cas.com:8443/storm-cas
 cas.server.loginUrl=${cas.server.prefixUrl}/login
 cas.server.logoutUrl=${cas.server.prefixUrl}/logout
 
-security.filterProcessesUrl=/login/cass
-security.checkService=${app.host}/${app.name}${security.filterProcessesUrl}
-security.logoutUrl=/logout/cas
-security.logoutSuccessUrl=${cas.server.logoutUrl}?service=${app.host}/${app.name}/
-security.proxyReceptorUrl=/j_spring_cas_security_proxyreceptor
+security.auth.dataSource.driver=com.mysql.jdbc.Driver
+security.auth.dataSource.url=jdbc:mysql://127.0.1:3306/earth?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=true
+security.auth.dataSource.username=root
+security.auth.dataSource.password=123456
+
+security.cas.filterProcessesUrl=/login/cas
+security.cas.service=${app.host}/${app.name}${security.cas.filterProcessesUrl}
+security.logout.successUrl=${cas.server.logoutUrl}?service=${app.host}/${app.name}/
+
