--- a/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
+++ b/sourcecode/breeze/rain/rain-web/src/main/resources/config/config.properties
@@ -16,9 +16,9 @@ cas.server.loginUrl=${cas.server.prefixUrl}/login
 cas.server.logoutUrl=${cas.server.prefixUrl}/logout
 
 security.auth.dataSource.driver=com.mysql.jdbc.Driver
-security.auth.dataSource.url=jdbc:mysql://127.0.1:3306/earth?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=true
+security.auth.dataSource.url=jdbc:mysql://106.14.169.0:3306/earth?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=true
 security.auth.dataSource.username=root
-security.auth.dataSource.password=123456
+security.auth.dataSource.password=!@#$qwer
 
 security.cas.filterProcessesUrl=/login/cas
 security.cas.service=${app.host}/${app.name}${security.cas.filterProcessesUrl}
