--- a/sourcecode/breeze/storm/storm-cas/src/main/resources/application-jdbc.properties
+++ b/sourcecode/breeze/storm/storm-cas/src/main/resources/application-jdbc.properties
@@ -5,7 +5,7 @@ cas.authn.jdbc.query[0].sql=SELECT password FROM users WHERE username=?
 cas.authn.jdbc.query[0].fieldPassword=password
 cas.authn.jdbc.query[0].healthQuery=SELECT 1
 cas.authn.jdbc.query[0].isolateInternalQueries=false
-cas.authn.jdbc.query[0].url=jdbc:mysql://127.0.1:3306/earth?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=true
+cas.authn.jdbc.query[0].url=jdbc:mysql://106.14.169.0:3306/earth?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&useSSL=true
 cas.authn.jdbc.query[0].failFast=true
 cas.authn.jdbc.query[0].isolationLevelName=ISOLATION_READ_COMMITTED
 cas.authn.jdbc.query[0].dialect=org.hibernate.dialect.MySQLDialect
@@ -15,7 +15,7 @@ cas.authn.jdbc.query[0].batchSize=1
 cas.authn.jdbc.query[0].user=root
 cas.authn.jdbc.query[0].ddlAuto=validate
 cas.authn.jdbc.query[0].maxAgeDays=180
-cas.authn.jdbc.query[0].password=123456
+cas.authn.jdbc.query[0].password=!@#$qwer
 cas.authn.jdbc.query[0].autocommit=false
 cas.authn.jdbc.query[0].driverClass=com.mysql.jdbc.Driver
 cas.authn.jdbc.query[0].idleTimeout=5000
