--- a/sourcecode/breeze/storm/storm-cas-client-security/pom.xml
+++ b/sourcecode/breeze/storm/storm-cas-client-security/pom.xml
@@ -22,9 +22,8 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>git.oschina.net.justlive1.breeze.storm</groupId>
-			<artifactId>storm-cas-client</artifactId>
-			<version>${version}</version>
+			<groupId>git.oschina.net.justlive1.breeze.snow</groupId>
+			<artifactId>snow-common-web</artifactId>
 		</dependency>
 
 		<dependency>
@@ -40,6 +39,11 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-cas</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
 		</dependency>
 
 		<dependency>
