测试单点登录

--- a/sourcecode/breeze/rain/rain-service/pom.xml
+++ b/sourcecode/breeze/rain/rain-service/pom.xml
@@ -27,6 +27,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>git.oschina.net.justlive1.breeze.storm</groupId>
+			<artifactId>storm-cas-client${storm-cas-client}</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>git.oschina.net.justlive1.breeze.rain</groupId>
 			<artifactId>rain-api</artifactId>
 		</dependency>
@@ -78,6 +83,12 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
